--- a/sass/components/_dropDown.scss
+++ b/sass/components/_dropDown.scss
@@ -72,6 +72,9 @@
 }
 
 #chevron-icon {
+    position: absolute;
+    top: 32px;
+    left: 231px;
     height: 17px;
     width: 20px;
     pointer-events: none;
@@ -152,3 +155,9 @@
         border-radius: 0 0 5px 5px;
     }
 }
+
+.activeOption {
+    background-color: $orange-light;
+    color: $black;
+}
+
