--- a/sass/components/_lightBox.scss
+++ b/sass/components/_lightBox.scss
@@ -94,6 +94,25 @@ video {
 }
 
 
+// Accessibility
+#message-nav {
+    display: flex;
+    flex-direction: row;
+}
+
+#message-text {
+    position: absolute;
+    left: 37%;
+    top: 1.5%;
+    width: 28rem;
+    color: $black;
+    font-weight: bold;
+    font-size: 0.8rem;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0.5rem;
+    display: none;
+}
 
 
 
