--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -59,12 +59,15 @@
         color:$primary-color;
         transform: scale(1);
         transition: transform 0.3s;
+        -webkit-animation: pulse 10.3s infinite;
+                animation: pulse 10.3s infinite;
     
         &:hover{
             transform: scale(1.5);
             color: $primary-color;
             cursor:pointer;
         }
+
     }
 }
 
