--- a/sass/components/_photographerBanner.scss
+++ b/sass/components/_photographerBanner.scss
@@ -8,6 +8,8 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 00.3125rem;
+    -webkit-animation: show 0.8s ease-in-out;
+                animation: show 0.8s ease-in-out;
 
     @include mediumDesktop {
         gap: 3rem;
