--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1520,6 +1520,8 @@ form label {
   object-fit: cover;
   background-color: #C4C4C4;
   border-radius: 50%;
+  -webkit-animation: show-down 0.8s ease-in-out;
+  animation: show-down 0.8s ease-in-out;
 }
 @media screen and (max-width: 992px) {
   .user-picture {
@@ -1545,6 +1547,8 @@ form label {
   display: flex;
   flex-direction: column;
   align-items: center;
+  -webkit-animation: show-up 0.8s ease-in-out;
+  animation: show-up 0.8s ease-in-out;
 }
 @media screen and (max-width: 320px) {
   .thumbnail {
