--- a/sass/animations/_formEffect.scss
+++ b/sass/animations/_formEffect.scss
@@ -1,19 +1,63 @@
-@-webkit-keyframes modalopen {
+
+  @-webkit-keyframes modal-fade-in {
     from {
       opacity: 0;
-      transform: translateY(-150px);
     }
     to {
       opacity: 1;
     }
   }
-@keyframes modalopen {
+  
+  @keyframes modal-fade-in {
     from {
       opacity: 0;
-      transform: translateY(-150px);
     }
     to {
       opacity: 1;
+    }
+  }
+
+  @-webkit-keyframes appear {
+    from {
+      transform: scale(0);
+    }
+    to {
+      transform: scale(1);
+    }
+  }
+
+  @-webkit-keyframes disappear {
+    to {
+      transform: scale(0.5);
+      opacity: 0;
+    }
+  }
+
+  @keyframes disappear {
+    to {
+      transform: scale(0.5);
+      opacity: 0;
+    }
+  }
+
+  @keyframes appear {
+    from {
+      transform: scale(0);
+    }
+    to {
+      transform: scale(1);
+    }
+  }
+  
+  @-webkit-keyframes modal-fade-out {
+    to {
+      opacity: 0;
+    }
+  }
+  
+  @keyframes modal-fade-out {
+    to {
+      opacity: 0;
     }
   }
 
