--- a/sass/components/_contactForm.scss
+++ b/sass/components/_contactForm.scss
@@ -11,6 +11,8 @@
     flex-direction: column;
     z-index: 1000;
     display: none;
+    -webkit-animation: modal-fade-in 0.3s forwards;
+            animation: modal-fade-in 0.3s forwards;
 
 }
 
@@ -23,8 +25,9 @@
     max-height: 90rem;
     border-radius: 0.3125rem;
     background-color: $orange-light;
-    -webkit-animation: modalopen 0.6s;
-            animation: modalopen 0.6s;
+    -webkit-animation: appear 0.3s forwards;
+            animation: appear 0.3s forwards;
+    
 }
 
 .form-header {
