--- a/sass/components/_lightBox.scss
+++ b/sass/components/_lightBox.scss
@@ -6,7 +6,7 @@
     font-size: 2rem;
     font-weight: 600;
     cursor: pointer; 
-    box-shadow: 5px 5px 5px 0px #9f9f9f, inset 4px 4px 15px 0px #000000, 5px 5px 0px 29px rgba(0,0,0,0);
+    box-shadow: 5px 5px 5px 0px #9f9f9f;
 }
 
 .lightBox__media-link {
@@ -40,8 +40,8 @@ video {
     display: none;
     justify-content: center;
     align-items: center;
-    -webkit-animation: show-down 0.8s ease-in-out;
-    animation: show-down 0.6s ease-in-out;
+    -webkit-animation: appear 0.5s forwards;
+    animation: appear 0.5s forwards;
 }
 
 #lightBox__close {
