--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1072,13 +1072,19 @@ video {
   background-color: transparent;
   color: #901c1c;
   border: none;
-  font-size: 60px;
+  font-size: 50px;
   cursor: pointer;
   margin-left: -0.5rem;
   height: 4rem;
+  transform: scale(1);
+  transition: transform 0.5s;
 }
-.lightBox__close:hover:focus {
-  transform: scale(1.2);
+.lightBox__close:hover,
+.lightBox__close :focus-visible,
+.lightBox__close :focus {
+  transition-duration: 0.5s;
+  transform: scale(1.3);
+  opacity: 0.6;
 }
 
 .lightBox__title {
@@ -1104,10 +1110,22 @@ video {
 .fa-angle-right {
   background-color: transparent;
   border: none;
-  font-size: 60px;
+  font-size: 40px;
   z-index: 11;
   color: #901c1c;
   cursor: pointer;
+  transform: scale(1);
+  transition: transform 0.5s;
+}
+.fa-angle-left:hover,
+.fa-angle-left :focus-visible,
+.fa-angle-left :focus,
+.fa-angle-right:hover,
+.fa-angle-right :focus-visible,
+.fa-angle-right :focus {
+  transition-duration: 0.5s;
+  transform: scale(1.5);
+  opacity: 0.6;
 }
 
 .lightBox__next-arrow {
@@ -1135,7 +1153,6 @@ video {
 
 .media-cards {
   width: 100%;
-  margin-top: 15px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -1453,7 +1470,7 @@ form label {
 }
 
 #photographer-gallery {
-  margin: 200px 100px;
+  margin: 200px 88px;
 }
 
 .photographer-gallery {
@@ -1461,6 +1478,9 @@ form label {
   grid-template-columns: repeat(3, 1fr);
   gap: 3.5rem 5rem;
   overflow: hidden;
+  padding-top: 12px;
+  padding-right: 12px;
+  padding-left: 12px;
   -webkit-animation: show 0.8s ease-in-out;
   animation: show 0.8s ease-in-out;
 }
@@ -1561,8 +1581,8 @@ form label {
   object-fit: cover;
   background-color: #C4C4C4;
   border-radius: 50%;
-  -webkit-animation: show-down 0.8s ease-in-out;
-  animation: show-down 0.8s ease-in-out;
+  -webkit-animation: show 0.8s ease-in-out;
+  animation: show 0.8s ease-in-out;
 }
 @media screen and (max-width: 992px) {
   .user-picture {
