--- a/sass/components/_lightBox.scss
+++ b/sass/components/_lightBox.scss
@@ -53,13 +53,19 @@ video {
     background-color: transparent;
     color: $primary-color;
     border: none;
-    font-size: 60px;
+    font-size: 50px;
     cursor: pointer;
     margin-left: -0.5rem;
     height: 4rem;
+    transform: scale(1);
+    transition: transform 0.5s;
 
-    &:hover:focus {
-        transform: scale(1.2);
+    &:hover,
+    :focus-visible,
+    :focus {
+        transition-duration: 0.5s;
+        transform: scale(1.3);
+        opacity: 0.6;
     }
 }
 
@@ -86,10 +92,20 @@ video {
 .fa-angle-right {
     background-color: transparent;
     border: none;
-    font-size: 60px;
+    font-size: 40px;
     z-index: 11;
     color: $primary-color;
     cursor: pointer;
+    transform: scale(1);
+    transition: transform 0.5s;
+
+    &:hover,
+    :focus-visible,
+    :focus {
+        transition-duration: 0.5s;
+        transform: scale(1.5);
+        opacity: 0.6;
+    }
 }
 
 .lightBox__next-arrow {
