--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -89,7 +89,7 @@
 }
 
 /* From 1369px */
-@mixin LargeDesktop {
+@mixin largeDesktop {
 	@media screen and (max-width: map-get($breakpoints, large-desktop)) {
 		@content;
 	}
