--- a/sass/layouts/_photographerPage-layout.scss
+++ b/sass/layouts/_photographerPage-layout.scss
@@ -32,7 +32,8 @@
 
     @include largeMobileLandscape {
         grid-template-columns: 1fr;
-        colum-gap: 0;
+        -moz-column-gap: 0;
+             column-gap: 0;
     }
 
 }
